--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
         <!--========== BOX ICONS ==========-->
         <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="icon" type="image/png" href="./images/Bag.png">
+        <link rel="icon" type="image/png" href="./img/favicon_penguin.png">
 
         <!--========== CSS ==========-->
         <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="sponsor.css">
+        <link rel="stylesheet" href="./public/css/sponsor.css">
 
         <title>Devcation 2022: Home</title>
     </head>
@@ -33,7 +33,8 @@
                         <li class="nav__item"><a href="#events" class="nav__link">Events</a></li>
                         <li class="nav__item"><a href="#timeline" class="nav__link">Timeline</a></li>
                         <li class="nav__item"><a href="#sponsors" class="nav__link">Sponsors</li>
-                        <li class="nav__item"><a href="#contact_us" class="nav__link">Contact Us</a></li>    
+                        <li class="nav__item"><a href="./view/team.html" class="nav__link">Team</a></li> 
+                        <li class="nav__item"><a href="./view/comingsoon.html" class="nav__link">Projects</a></li>    
                         <li><i class='bx bx-toggle-left change-theme' id="theme-button"></i></li>
                     </ul>
                 </div>
@@ -286,10 +287,10 @@
         <script src="main.js"></script>
         
         <!-- Timeline.js -->
-        <script src="timeline.js"></script>
+        <script src="./public/js/timeline.js"></script>
 
         <!-- Sponsors -->
-        <script src="sponsors.js"></script>
+        <script src="./public/js/sponsors.js"></script>
     </body>
 
 </html>
