Added event pages
Added design n solve
Added hack n solve
Added ideate n solve
To Do: Add rules and description

--- a/index.html
+++ b/index.html
@@ -132,22 +132,23 @@
             <section class="decoration section bd-container" id="events">
                 <h2 class="section-title">Events</h2>
                 <div class="decoration__container bd-grid">
+
+                  <div class="decoration__data">
+                    <img src="./img/Ideate.png" alt="" class="decoration__img" id="burger_render">
+                    <h3 class="decoration__title">Ideate 'n' Solve</h3>
+                    <a href="./view/ideatesolve.html" class="button button-link">Details</a>
+                </div>
+                
                     <div class="decoration__data">
                         <img src="./img/Design.png" alt="" class="decoration__img" id="apple_render">
                         <h3 class="decoration__title">Design 'n' Solve</h3> 
-                        <a href="#" class="button button-link">Details</a>
-                    </div>
-
-                    <div class="decoration__data">
-                        <img src="./img/Ideate.png" alt="" class="decoration__img" id="burger_render">
-                        <h3 class="decoration__title">Ideate 'n' Solve</h3>
-                        <a href="#" class="button button-link">Details</a>
+                        <a href="./view/designsolve.html" class="button button-link">Details</a>
                     </div>
 
                     <div class="decoration__data">
                         <img src="./img/Hack.png" alt="" class="decoration__img" id="milk_render">
                         <h3 class="decoration__title">Hack 'n' Solve</h3>
-                        <a href="#" class="button button-link">Details</a>
+                        <a href="./view/hacksolve.html" class="button button-link">Details</a>
                     </div>
                 </div>
             </section>
