--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         <script src="https://unpkg.com/scrollreveal"></script>
 
         <!--========== MAIN JS ==========-->
-        <script src="main.js"></script>
+        <script src="./main.js"></script>
         
         <!-- Timeline.js -->
         <script src="./public/js/timeline.js"></script>
