sponsors centre aligned

--- a/index.html
+++ b/index.html
@@ -251,10 +251,10 @@
 
              <!-- ==========Sponsors============ -->
 
-             <section id="sponsors" class="section ">
+             <section id="sponsor" class="section ">
 
                 <div class="sponsor-container ">
-                  <h1 class="section-title">Title Sponsor</h1>
+                  <h1 class="section-title">Title Sponsor ⚡</h1>
                   <div class="sponsor-logo ">
                     <img src="img\Sponsor Logos\Title Sponsor\Polygon_Logo-Colored.png" alt="">
                     <img src="img\Sponsor Logos\Title Sponsor\Devfolio_Logo-Colored.png" alt="">
@@ -263,7 +263,7 @@
                 </div>
 
                 <div class="sponsor-container">
-                  <h1 class="section-title">Platinum Sponsor</h1>
+                  <h1 class="section-title">Platinum Sponsor 💫</h1>
                   <div class="sponsor-logo">
                     <img src="img\Sponsor Logos\Platinum Sponsor\Celo Logo Color.png" alt="">
                     <img src="img\Sponsor Logos\Platinum Sponsor\Filecoin Coloured White Text.png" alt="">
@@ -273,7 +273,7 @@
                 </div>
 
                 <div class="sponsor-container">
-                  <h1 class="section-title">Gold Sponsor</h1>
+                  <h1 class="section-title">Gold Sponsor 🥇</h1>
                   <div class="sponsor-logo">
                     <img src="img\Sponsor Logos\Gold Sponsor\interview-cake.png" alt="">
                     <img src="img\Sponsor Logos\Gold Sponsor\Leading_Learners_Logo.png" alt="">
@@ -293,7 +293,7 @@
                 </div> -->
                
                 <div class="sponsor-container">
-                  <h1 class="section-title">Certificate Sponsor</h1>
+                  <h1 class="section-title">Certificate Sponsor 📜</h1>
                   <div class="sponsor-logo">
                     <img src="img\Sponsor Logos\Certificate Partner\gmc_logo.png" alt="">
                   </div>
