silver sponsors added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="./public/css/sponsor.css">
 
         <title>Devcation 2022: Home</title>
+        <script defer async src="https://apply.devfolio.co/v2/sdk.js"></script>
     </head>
     <body>
         <!--========== SCROLL TOP ==========-->
@@ -149,6 +150,12 @@
                         <img src="./img/Hack.png" alt="" class="decoration__img" id="milk_render">
                         <h3 class="decoration__title">Hack 'n' Solve</h3>
                         <a href="./view/hacksolve.html" class="button button-link">Details</a>
+                        <div 
+                          class="apply-button" 
+                          data-hackathon-slug="YOUR-HACKATHON-SLUG" 
+                          data-button-theme="light"
+                          style="height: 44px; width: 312px"
+                        ></div>
                     </div>
                 </div>
             </section>
@@ -284,13 +291,13 @@
 
                 </div>
 
-                <!-- <div class="sponsor-container">
-                  <h1 class="section-title">Silver Sponsor</h1>
+                <div class="sponsor-container">
+                  <h1 class="section-title">Silver Sponsor 🥈</h1>
                   <div class="sponsor-logo">
-                    
+                    <img src="img\Sponsor Logos\Silver Sponsor\rosenfeld-logo.gif" alt="">
                   </div>
 
-                </div> -->
+                </div>
                
                 <div class="sponsor-container">
                   <h1 class="section-title">Certificate Sponsor 📜</h1>
