devfolio button added

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         <a href="./view/hacksolve.html" class="button button-link">Details</a>
                         <div 
                           class="apply-button" 
-                          data-hackathon-slug="YOUR-HACKATHON-SLUG" 
+                          data-hackathon-slug="hack-n-solve" 
                           data-button-theme="light"
                           style="height: 44px; width: 312px"
                         ></div>
