--- a/index.html
+++ b/index.html
@@ -137,19 +137,23 @@
                     <div class="decoration__data">
                         <img src="./img/Design.png" alt="" class="decoration__img" id="apple_render">
                         <h3 class="decoration__title">Design 'n' Solve</h3> 
-                        <a href="./view/designsolve.html" class="button button-link">Details</a>
+                        <!--<a href="./view/designsolve.html" class="button button-link">Details</a>-->
+                        <div class="button"><a href="./view/designsolve.html" class="button-link" style="color:white">Details</a></div>
+                        <div class="button"><a href="./view/comingsoon.html" class="button-link" style="color:white">Register</a></div>
                     </div>
 
                     <div class="decoration__data">
                       <img src="./img/Ideate.png" alt="" class="decoration__img" id="burger_render">
                       <h3 class="decoration__title">Ideate 'n' Solve</h3>
-                      <a href="./view/ideatesolve.html" class="button button-link">Details</a>
+                      <div class="button"><a href="./view/designsolve.html" class="button-link" style="color:white">Details</a></div>
+                      <div class="button"><a href="./view/comingsoon.html" class="button-link" style="color:white">Register</a></div>
                   </div>
 
                     <div class="decoration__data">
                         <img src="./img/Hack.png" alt="" class="decoration__img" id="milk_render">
                         <h3 class="decoration__title">Hack 'n' Solve</h3>
-                        <a href="./view/hacksolve.html" class="button button-link">Details</a>
+                        <div class="button"><a href="./view/designsolve.html" class="button-link" style="color:white">Details</a></div>
+                        <!--<div class="button"><a href="#" class="button-link" style="color:white">Register</a></div>-->
                         <div 
                           class="apply-button" 
                           data-hackathon-slug="hack-n-solve" 
@@ -263,8 +267,8 @@
                 <div class="sponsor-container ">
                   <h1 class="section-title">Title Sponsor ⚡</h1>
                   <div class="sponsor-logo ">
-                    <img src="img\Sponsor Logos\Title Sponsor\Polygon_Logo-Colored.png" alt="">
-                    <img src="img\Sponsor Logos\Title Sponsor\Devfolio_Logo-Colored.png" alt="">
+                    <img src="./img/Sponsor Logos/Title Sponsor/Polygon_Logo-Colored.png" alt="">
+                    <img src="./img/Sponsor Logos/Title Sponsor/Devfolio_Logo-Colored.png" alt="">
                   </div>
 
                 </div>
