--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <section class="home" id="home">
                 <div class="home__container bd-container bd-grid">
                     <div class="home__img">
-                        <img src="./img/party.png" alt="">
+                        <img src="./img/pingu.png" alt="">
                     </div>
 
                     <div class="home__data">
@@ -152,14 +152,14 @@
                     <div class="decoration__data">
                         <img src="./img/Hack.png" alt="" class="decoration__img" id="milk_render">
                         <h3 class="decoration__title">Hack 'n' Solve</h3>
-                        <div class="button"><a href="./view/designsolve.html" class="button-link" style="color:white">Details</a></div>
-                        <!--<div class="button"><a href="#" class="button-link" style="color:white">Register</a></div>-->
-                        <div 
+                        <div class="button"><a href="./view/hacksolve.html" class="button-link" style="color:white">Details</a></div>
+                        <div class="button"><a href="./view/hacksolve.html" class="button-link" style="color:white">Register</a></div>
+                        <!--<div 
                           class="apply-button" 
                           data-hackathon-slug="hack-n-solve" 
                           data-button-theme="light"
                           style="height: 44px; width: 312px"
-                        ></div>
+                        ></div>-->
                     </div>
                 </div>
             </section>
