--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="decoration__data">
                       <img src="./img/Ideate.png" alt="" class="decoration__img" id="burger_render">
                       <h3 class="decoration__title">Ideate 'n' Solve</h3>
-                      <div class="button"><a href="./view/designsolve.html" class="button-link" style="color:white">Details</a></div>
+                      <div class="button"><a href="./view/ideatesolve.html" class="button-link" style="color:white">Details</a></div>
                       <div class="button"><a href="./view/comingsoon.html" class="button-link" style="color:white">Register</a></div>
                   </div>
 
@@ -262,7 +262,7 @@
 
              <!-- ==========Sponsors============ -->
 
-             <section id="sponsor" class="section ">
+             <section id="sponsors" class="section ">
 
                 <div class="sponsor-container ">
                   <h1 class="section-title">Title Sponsor ⚡</h1>
