Rosenfeld Link update

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                 <div class="sponsor-container">
                   <h1 class="section-title">Silver Sponsor 🥈</h1>
                   <div class="sponsor-logo">
-                    <img src="img\Sponsor Logos\Silver Sponsor\rosenfeld-logo.gif" alt="">
+                    <a href="https://rosenfeldmedia.com/"><img src="img\Sponsor Logos\Silver Sponsor\rosenfeld-logo.gif" alt=""></a>
                   </div>
 
                 </div>
