Devfolio btn added, sponsor added

--- a/index.html
+++ b/index.html
@@ -302,6 +302,13 @@
                   </div>
 
                 </div>
+
+                <div class="sponsor-container">
+                  <h1 class="section-title">Media and Streaming Sponsor 📽️</h1>
+                  <div class="sponsor-logo">
+                    <a href="https://streamyard.com/"><img src="img\Sponsor Logos\Streaming and Media Partner\logo.png" alt=""></a>
+                  </div>
+                </div>
                
                 <div class="sponsor-container">
                   <h1 class="section-title">Certificate Sponsor 📜</h1>
