sponsor title update

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
       </div>
 
       <div class="sponsor-container">
-        <h1 class="section-title">Streaming and Media Sponsor 🎥</h1>
+        <h1 class="section-title">Streaming and Media Partner 🎥</h1>
         <div class="sponsor-logo">
           <a href="https://streamyard.com/"><img src="img\Sponsor Logos\Streaming and Media Partner\streamyard-logo.png"
               alt=""></a>
@@ -333,7 +333,7 @@
       </div>
 
       <div class="sponsor-container">
-        <h1 class="section-title">Certificate Sponsor 📜</h1>
+        <h1 class="section-title">Certificate Partner 📜</h1>
         <div class="sponsor-logo">
           <a href="https://givemycertificate.com/"><img src="img\Sponsor Logos\Certificate Partner\gmc_logo.png"
               alt=""></a>
