--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <!--<a href="./view/designsolve.html" class="button button-link">Details</a>-->
           <div class="button"><a href="./view/designsolve.html" class="button-link" style="color:white">Details</a>
           </div>
-          <div class="button"><a href="./view/comingsoon.html" class="button-link" style="color:white">Register</a>
+          <div class="button"><a href="https://dare2compete.com/hackathon/designnsolve-devcation-indira-gandhi-delhi-technical-university-for-women-igdtuw-delhi-266079" class="button-link" style="color:white">Register</a>
           </div>
         </div>
 
@@ -156,7 +156,7 @@
           <h3 class="decoration__title">Ideate 'n' Solve</h3>
           <div class="button"><a href="./view/ideatesolve.html" class="button-link" style="color:white">Details</a>
           </div>
-          <div class="button"><a href="./view/comingsoon.html" class="button-link" style="color:white">Register</a>
+          <div class="button"><a href="https://dare2compete.com/hackathon/ideatensolve-devcation-266047" class="button-link" style="color:white">Register</a>
           </div>
         </div>
 
