--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
           <div class="slide"><a href="https://devfolio.co/"><img src="./img/Sponsor Logos/Title Sponsor/Devfolio_Logo-Colored.png" alt=""></a></div>
           <div class="slide"><a href="https://polygon.com/"><img src="./img/Sponsor Logos/Title Sponsor/Polygon_Logo-Colored.png" alt=""></a></div>
           <div class="slide"><a href="https://hoverrobotix.com/"><img src="./img/Sponsor Logos/Title Sponsor/HoverRobotix-logo.png" alt=""></a></div>
-          <div class="slide"><a href="https://mentro.tech/"><img src="./img/Sponsor Logos/Title Sponsor/mentro_metaimg.png" alt=""></a></div>
+          <div class="slide"><a href="https://mentro.tech/"><img src="./img/Sponsor Logos/Title Sponsor/mentro-logo-01.png" alt=""></a></div>
        </section>
       </div>
 
@@ -318,7 +318,7 @@
       <div class="sponsor-container">
         <h1 class="section-title">Silver Sponsor 🥈</h1>
         <section class="customer-logos slider">
-          <div class="slide"><a href="https://www.echo3d.co/"><img src="img\Sponsor Logos\Silver Sponsor\echo3D - Logo 2021 - Background.png" alt=""></a></div>
+          <div class="slide"><a href="https://www.echo3d.co/"><img src="img\Sponsor Logos\Silver Sponsor\echo3D - Logo 2021 - Black.png" alt=""></a></div>
           <div class="slide"><a href="https://rosenfeldmedia.com/"><img src="img\Sponsor Logos\Silver Sponsor\rosenfeld-logo.gif" alt=""></a></div>
           <div class="slide"><a href="https://artofproblemsolving.com/"><img src="img\Sponsor Logos\Silver Sponsor\AoPS_Main_Logo.png" alt=""></a></div>
        </section>
