--- a/index.html
+++ b/index.html
@@ -321,6 +321,8 @@
           <div class="slide"><a href="https://www.echo3d.co/"><img src="img\Sponsor Logos\Silver Sponsor\echo3D - Logo 2021 - Black.png" alt=""></a></div>
           <div class="slide"><a href="https://rosenfeldmedia.com/"><img src="img\Sponsor Logos\Silver Sponsor\rosenfeld-logo.gif" alt=""></a></div>
           <div class="slide"><a href="https://artofproblemsolving.com/"><img src="img\Sponsor Logos\Silver Sponsor\AoPS_Main_Logo.png" alt=""></a></div>
+          <div class="slide"><a href="https://www.codingninjas.com/"><img src="img\Sponsor Logos\Silver Sponsor\coding-ninjas-logo-white.png" alt=""></a></div>
+          <div class="slide"><a href="https://cybrancee.com/"><img src="img\Sponsor Logos\Silver Sponsor\Cybrancee-logo.png" alt=""></a></div>
        </section>
       </div>
 
