--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@
           <div class="slide"><a href="https://filecoin.io/"><img src="img\Sponsor Logos\Platinum Sponsor\Filecoin Coloured White Text.png" alt=""></a></div>
           <div class="slide"><a href="https://celo.org/"><img src="img\Sponsor Logos\Platinum Sponsor\Celo Logo Color.png" alt=""></a></div>
           <div class="slide"><a href="https://geeksforgeeks.org/"><img src="img\Sponsor Logos\Platinum Sponsor\gfg-new-logo.png" alt=""></a></div>
+          <div class="slide"><a href="https://www.digitalocean.com/"><img src="img\Sponsor Logos\Platinum Sponsor\DO_Logo_Vertical_Blue.png" alt=""></a></div>
        </section>
       </div>
 
@@ -312,6 +313,7 @@
           <div class="slide"><a href="https://interviewcake.com/"><img src="img\Sponsor Logos\Gold Sponsor\interview-cake.png" alt=""></a></div>
           <div class="slide"><a href="https://wolfram.com/"><img src="img\Sponsor Logos\Gold Sponsor\wolfram-language-text-logo.png" alt=""></a></div>
           <div class="slide"><a href="https://gen.xyz/"><img src="img\Sponsor Logos\Gold Sponsor\xyz-logo-color.png" alt=""></a></div>
+          <div class="slide"><a href="https://instagram.com/divyagerafoundation_"><img src="img\Sponsor Logos\Gold Sponsor\dgf logo.png" alt=""></a></div>
        </section>
       </div>
 
@@ -326,6 +328,13 @@
        </section>
       </div>
 
+      <div class="sponsor-container">
+        <h1 class="section-title">Community Partner 🌐</h1>
+        <div class="sponsor-logo">
+          <a href="https://heiphen.com/"><img src="img\Sponsor Logos\Community Partner\heipehn-dark.png"
+              alt=""></a>
+        </div>
+      </div>
       <div class="sponsor-container">
         <h1 class="section-title">Streaming and Media Partner 🎥</h1>
         <div class="sponsor-logo">
