--- a/index.html
+++ b/index.html
@@ -325,6 +325,11 @@
           <div class="slide"><a href="https://artofproblemsolving.com/"><img src="img\Sponsor Logos\Silver Sponsor\AoPS_Main_Logo.png" alt=""></a></div>
           <div class="slide"><a href="https://www.codingninjas.com/"><img src="img\Sponsor Logos\Silver Sponsor\coding-ninjas-logo-white.png" alt=""></a></div>
           <div class="slide"><a href="https://cybrancee.com/"><img src="img\Sponsor Logos\Silver Sponsor\Cybrancee-logo.png" alt=""></a></div>
+          <div class="slide"><a href="https://www.wrapcart.com/"><img src="img\Sponsor Logos\Silver Sponsor\WrapCart_Logo.png" alt=""></a></div>
+          <div class="slide"><a href="https://1password.com"><img src="img\Sponsor Logos\Silver Sponsor\1P-wordmark.png" alt=""></a></div>
+          <div class="slide"><a href="http://www.sketch.com/"><img src="img\Sponsor Logos\Silver Sponsor\Sketch-Logo-Light.png" alt=""></a></div>
+          <div class="slide"><a href="https://www.clerky.com/"><img src="img\Sponsor Logos\Silver Sponsor\Clerky_Logo.jpg" alt=""></a></div>
+          <div class="slide"><a href="https://www.axure.com/"><img src="img\Sponsor Logos\Silver Sponsor\Axure_Logo.png" alt=""></a></div>
        </section>
       </div>
 
