--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
           <div class="slide"><a href="https://celo.org/"><img src="img\Sponsor Logos\Platinum Sponsor\Celo Logo Color.png" alt=""></a></div>
           <div class="slide"><a href="https://geeksforgeeks.org/"><img src="img\Sponsor Logos\Platinum Sponsor\gfg-new-logo.png" alt=""></a></div>
           <div class="slide"><a href="https://www.digitalocean.com/"><img src="img\Sponsor Logos\Platinum Sponsor\DO_Logo_Vertical_Blue.png" alt=""></a></div>
+          <div class="slide"><a href="https://www.postman.com/"><img src="img\Sponsor Logos\Platinum Sponsor\postman-logo.png" alt=""></a></div>
        </section>
       </div>
 
