--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
           <div class="slide"><a title="Thapar ACM" href="https://www.linkedin.com/company/thapar-acm-student-chapter/mycompany/"><img src="img\Sponsor Logos\Community Partner\thapar_ACM.png" alt=""></a></div>
           <div class="slide"><a title="ACM IGDTUW" href="https://www.linkedin.com/company/acm-student-chapter-igdtuw"><img src="img\Sponsor Logos\Community Partner\ACM- IGDTUW Student Chapter.jpg" alt=""></a></div>
           <div class="slide"><a title="Mozilla Firefox Club VIT Bhopal" href="https://www.linkedin.com/company/mozilla-firefox-club-vit-bhopal/"><img src="img\Sponsor Logos\Community Partner\Mozilla Firefox VIT-Bhopal.jpeg" alt=""></a></div>
+          <div class="slide"><a title="MLSA" href="https://studentambassadors.microsoft.com/"><img src="img\Sponsor Logos\Community Partner\MLSA.png" alt=""></a></div>
        </section>
       </div>
 
