--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
           <li class="nav__item"><a href="#about" class="nav__link ">About</a></li>
           <li class="nav__item"><a href="#theme" class="nav__link ">Theme</a></li>
           <li class="nav__item"><a href="#events" class="nav__link">Events</a></li>
-          <li class="nav__item"><a href="#timeline" class="nav__link">Timeline</a></li>
+          <!-- <li class="nav__item"><a href="#timeline" class="nav__link">Timeline</a></li> -->
           <li class="nav__item"><a href="#sponsors" class="nav__link">Sponsors</li>
           <li class="nav__item"><a href="./view/team.html" class="nav__link">Team</a></li>
-          <li class="nav__item"><a href="./view/comingsoon.html" class="nav__link">Projects</a></li>
+          <li class="nav__item"><a href="#speakers" class="nav__link">Schedule</a></li>
           <li><i class='bx bx-toggle-left change-theme' id="theme-button"></i></li>
         </ul>
       </div>
@@ -175,7 +175,7 @@
       </div>
     </section>
 
-    <!-- =============Timeline============= -->
+    <!-- =============Timeline=============
 
     <div id="timeline">
       <section class="intro">
@@ -254,7 +254,7 @@
                           </li>-->
         </ul>
       </section>
-    </div>
+    </div> -->
 
     <!-- ==========Speakers========== -->
 
@@ -264,7 +264,7 @@
           <img src="./img/Speaker.png" alt="">
         </div>
         <div class="share__data">
-          <h2 class="section-title-center"> Meet our speakers </h2>
+          <h2 class="section-title-center"> Checkout The Schedule </h2>
 
           <a href="./view/comingsoon.html" class="button">Here!</a>
 
