--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         <div class="share__data">
           <h2 class="section-title-center"> Checkout The Schedule </h2>
 
-          <a href="./view/comingsoon.html" class="button">Here!</a>
+          <a href="./view/schedule.html" class="button">Here!</a>
 
           <!-- <a href="#" class="button">Learn More</a> -->
         </div>
