--- a/index.html
+++ b/index.html
@@ -281,73 +281,76 @@
 
     <section id="sponsors" class="section ">
       <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-      <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script> -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
       <div class="sponsor-container ">
         <h1 class="section-title">Title Sponsor ⚡</h1>
-        <section class="customer-logos sponsor-logor">
-          <div class="sponsor-logo"><a title="Devfolio" href="https://devfolio.co/"><img src="./img/Sponsor Logos/Title Sponsor/Devfolio_Logo-Colored.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="Polygon" href="https://polygon.com/"><img src="./img/Sponsor Logos/Title Sponsor/Polygon_Logo-Colored.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="HoverRobotix" href="https://hoverrobotix.com/"><img src="./img/Sponsor Logos/Title Sponsor/HoverRobotix-logo.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="Mentro" href="https://mentro.tech/"><img src="./img/Sponsor Logos/Title Sponsor/mentro-logo-01.png" alt=""></a></div>
+        <section class="customer-logos slider">
+          <div class="slide"><a title="Devfolio" href="https://devfolio.co/"><img src="./img/Sponsor Logos/Title Sponsor/Devfolio_Logo-Colored.png" alt=""></a></div>
+          <div class="slide"><a title="Polygon" href="https://polygon.com/"><img src="./img/Sponsor Logos/Title Sponsor/Polygon_Logo-Colored.png" alt=""></a></div>
+          <div class="slide"><a title="HoverRobotix" href="https://hoverrobotix.com/"><img src="./img/Sponsor Logos/Title Sponsor/HoverRobotix-logo.png" alt=""></a></div>
+          <div class="slide"><a title="Mentro" href="https://mentro.tech/"><img src="./img/Sponsor Logos/Title Sponsor/mentro-logo-01.png" alt=""></a></div>
        </section>
       </div>
 
       <div class="sponsor-container">
         <h1 class="section-title">Platinum Sponsor 💫</h1>
-        <section class="customer-logos sponsor-logor">
-          <div class="sponsor-logo"><a title="Tezos" href="https://tezos.com/"><img src="img\Sponsor Logos\Platinum Sponsor\Tezos_Logo-Colored.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="Filecoin" href="https://filecoin.io/"><img src="img\Sponsor Logos\Platinum Sponsor\Filecoin Coloured White Text.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="Celo" href="https://celo.org/"><img src="img\Sponsor Logos\Platinum Sponsor\Celo Logo Color.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="GeeksForGeeks" href="https://geeksforgeeks.org/"><img src="img\Sponsor Logos\Platinum Sponsor\gfg-new-logo.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="Digital Ocean" href="https://www.digitalocean.com/"><img src="img\Sponsor Logos\Platinum Sponsor\DO_Logo_Vertical_Blue.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="Postman" href="https://www.postman.com/"><img src="img\Sponsor Logos\Platinum Sponsor\postman-logo.png" alt=""></a></div>
+        <section class="customer-logos slider">
+          <div class="slide"><a title="Tezos" href="https://tezos.com/"><img src="img\Sponsor Logos\Platinum Sponsor\Tezos_Logo-Colored.png" alt=""></a></div>
+          <div class="slide"><a title="Filecoin" href="https://filecoin.io/"><img src="img\Sponsor Logos\Platinum Sponsor\Filecoin Coloured White Text.png" alt=""></a></div>
+          <div class="slide"><a title="Celo" href="https://celo.org/"><img src="img\Sponsor Logos\Platinum Sponsor\Celo Logo Color.png" alt=""></a></div>
+          <div class="slide"><a title="GeeksForGeeks" href="https://geeksforgeeks.org/"><img src="img\Sponsor Logos\Platinum Sponsor\gfg-new-logo.png" alt=""></a></div>
+          <div class="slide"><a title="Digital Ocean" href="https://www.digitalocean.com/"><img src="img\Sponsor Logos\Platinum Sponsor\DO_Logo_Vertical_Blue.png" alt=""></a></div>
+          <div class="slide"><a title="Postman" href="https://www.postman.com/"><img src="img\Sponsor Logos\Platinum Sponsor\postman-logo.png" alt=""></a></div>
+          <div class="slide"><a title="Lumos Labs" href="https://www.lumoslabs.co/"><img src="img\Sponsor Logos\Platinum Sponsor\lumos-logo.png" alt=""></a></div>
        </section>
       </div>
 
       <div class="sponsor-container">
         <h1 class="section-title">Gold Sponsor 🥇</h1>
-        <section class="customer-logos sponsor-logor">
-          <div class="sponsor-logo"><a title="Lead Learners" href="https://www.leadlearners.ca/"><img src="img\Sponsor Logos\Gold Sponsor\Leading_Learners_Logo.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="Voiceflow" href="https://www.voiceflow.com/"><img src="img\Sponsor Logos\Gold Sponsor\Voiceflow_Logo.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="Taskade" href="https://taskade.com/"><img src="img\Sponsor Logos\Gold Sponsor\taskade-logo.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="Interview Buddy" href="https://interviewbuddy.in/"><img src="img\Sponsor Logos\Gold Sponsor\logo-of-interviewbuddy.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="Interview Cake" href="https://interviewcake.com/"><img src="img\Sponsor Logos\Gold Sponsor\interview-cake.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="Wolfram" href="https://wolfram.com/"><img src="img\Sponsor Logos\Gold Sponsor\wolfram-language-text-logo.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title=".XYZ" href="https://gen.xyz/"><img src="img\Sponsor Logos\Gold Sponsor\xyz-logo-color.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="Divya Gera Foundation" href="https://instagram.com/divyagerafoundation_"><img src="img\Sponsor Logos\Gold Sponsor\dgf logo.png" alt=""></a></div>
+        <section class="customer-logos slider">
+          <div class="slide"><a title="Lead Learners" href="https://www.leadlearners.ca/"><img src="img\Sponsor Logos\Gold Sponsor\Leading_Learners_Logo.png" alt=""></a></div>
+          <div class="slide"><a title="Voiceflow" href="https://www.voiceflow.com/"><img src="img\Sponsor Logos\Gold Sponsor\Voiceflow_Logo.png" alt=""></a></div>
+          <div class="slide"><a title="Taskade" href="https://taskade.com/"><img src="img\Sponsor Logos\Gold Sponsor\taskade-logo.png" alt=""></a></div>
+          <div class="slide"><a title="Interview Buddy" href="https://interviewbuddy.in/"><img src="img\Sponsor Logos\Gold Sponsor\logo-of-interviewbuddy.png" alt=""></a></div>
+          <div class="slide"><a title="Interview Cake" href="https://interviewcake.com/"><img src="img\Sponsor Logos\Gold Sponsor\interview-cake.png" alt=""></a></div>
+          <div class="slide"><a title="Wolfram" href="https://wolfram.com/"><img src="img\Sponsor Logos\Gold Sponsor\wolfram-language-text-logo.png" alt=""></a></div>
+          <div class="slide"><a title=".XYZ" href="https://gen.xyz/"><img src="img\Sponsor Logos\Gold Sponsor\xyz-logo-color.png" alt=""></a></div>
+          <div class="slide"><a title="Divya Gera Foundation" href="https://instagram.com/divyagerafoundation_"><img src="img\Sponsor Logos\Gold Sponsor\dgf logo.png" alt=""></a></div>
+          <div class="slide"><a title="Alan AI" href="https://alan.app/"><img src="img\Sponsor Logos\Gold Sponsor\alan-logo-horizontal-color.png" alt=""></a></div>
        </section>
       </div>
 
       <div class="sponsor-container">
         <h1 class="section-title">Silver Sponsor 🥈</h1>
-        <section class="customer-logos sponsor-logor">
-          <div class="sponsor-logo"><a title="Echo3D" href="https://www.echo3d.co/"><img src="img\Sponsor Logos\Silver Sponsor\echo3D - Logo 2021 - Black.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="Rosenfeld" href="https://rosenfeldmedia.com/"><img src="img\Sponsor Logos\Silver Sponsor\rosenfeld-logo.gif" alt=""></a></div>
-          <div class="sponsor-logo"><a title="Art Of Problem Solving" href="https://artofproblemsolving.com/"><img src="img\Sponsor Logos\Silver Sponsor\AoPS_Main_Logo.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="Coding Ninjas" href="https://www.codingninjas.com/"><img src="img\Sponsor Logos\Silver Sponsor\coding-ninjas-logo-white.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="Cybrancee" href="https://cybrancee.com/"><img src="img\Sponsor Logos\Silver Sponsor\Cybrancee-logo.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="WrapCart" href="https://www.wrapcart.com/"><img src="img\Sponsor Logos\Silver Sponsor\WrapCart_Logo.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="1password" href="https://1password.com"><img src="img\Sponsor Logos\Silver Sponsor\1P-wordmark.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="Sketch" href="http://www.sketch.com/"><img src="img\Sponsor Logos\Silver Sponsor\Sketch-Logo-Light.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="Clerky" href="https://www.clerky.com/"><img src="img\Sponsor Logos\Silver Sponsor\Clerky_Logo.jpg" alt=""></a></div>
-          <div class="sponsor-logo"><a title="Axure" href="https://www.axure.com/"><img src="img\Sponsor Logos\Silver Sponsor\Axure_Logo.png" alt=""></a></div>
+        <section class="customer-logos slider">
+          <div class="slide"><a title="Echo3D" href="https://www.echo3d.co/"><img src="img\Sponsor Logos\Silver Sponsor\echo3D - Logo 2021 - Black.png" alt=""></a></div>
+          <div class="slide"><a title="Rosenfeld" href="https://rosenfeldmedia.com/"><img src="img\Sponsor Logos\Silver Sponsor\rosenfeld-logo.gif" alt=""></a></div>
+          <div class="slide"><a title="Art Of Problem Solving" href="https://artofproblemsolving.com/"><img src="img\Sponsor Logos\Silver Sponsor\AoPS_Main_Logo.png" alt=""></a></div>
+          <div class="slide"><a title="Coding Ninjas" href="https://www.codingninjas.com/"><img src="img\Sponsor Logos\Silver Sponsor\coding-ninjas-logo-white.png" alt=""></a></div>
+          <div class="slide"><a title="Cybrancee" href="https://cybrancee.com/"><img src="img\Sponsor Logos\Silver Sponsor\Cybrancee-logo.png" alt=""></a></div>
+          <div class="slide"><a title="WrapCart" href="https://www.wrapcart.com/"><img src="img\Sponsor Logos\Silver Sponsor\WrapCart_Logo.png" alt=""></a></div>
+          <div class="slide"><a title="1password" href="https://1password.com"><img src="img\Sponsor Logos\Silver Sponsor\1P-wordmark.png" alt=""></a></div>
+          <div class="slide"><a title="Sketch" href="http://www.sketch.com/"><img src="img\Sponsor Logos\Silver Sponsor\Sketch-Logo-Light.png" alt=""></a></div>
+          <div class="slide"><a title="Clerky" href="https://www.clerky.com/"><img src="img\Sponsor Logos\Silver Sponsor\Clerky_Logo.jpg" alt=""></a></div>
+          <div class="slide"><a title="Axure" href="https://www.axure.com/"><img src="img\Sponsor Logos\Silver Sponsor\Axure_Logo.png" alt=""></a></div>
+          <div class="slide"><a title="Fueler" href="https://fueler.io/"><img src="img\Sponsor Logos\Silver Sponsor\fueler_logo.png" alt=""></a></div>
        </section>
       </div>
 
       <div class="sponsor-container">
         <h1 class="section-title">Community Partner 🌐</h1>
-        <section class="customer-logos sponsor-logor">
-          <div class="sponsor-logo"><a title="Heiphen" href="https://heiphen.com/"><img src="img\Sponsor Logos\Community Partner\heipehn-dark.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="Technoliterati IGDTUW" href="https://www.linkedin.com/company/technoliterati-igdtuw/mycompany/"><img src="img\Sponsor Logos\Community Partner\TLit logo - Charanjeev Kaur.jpg" alt=""></a></div>
-          <div class="sponsor-logo"><a title="GeeksForGeeks IGDTUW" href="https://instagram.com/geeksforgeeks.igdtuw?utm_medium=copy_link"><img src="img\Sponsor Logos\Community Partner\GFG_official logo - GFG Igdtuw.jfif" alt=""></a></div>
-          <div class="sponsor-logo"><a title="GDSC NSUT" href="https://www.linkedin.com/company/dscnsut/"><img src="img\Sponsor Logos\Community Partner\GDSC_NSUT.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="GDSC GLAU" href="https://www.linkedin.com/company/gdsc-glau/"><img src="img\Sponsor Logos\Community Partner\GDSC_GLA.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="GDSC DIEMS" href="https://www.linkedin.com/in/gdsc-diems-4ab938220/"><img src="img\Sponsor Logos\Community Partner\GDSC_DIEMS.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="Thapar ACM" href="https://www.linkedin.com/company/thapar-acm-student-chapter/mycompany/"><img src="img\Sponsor Logos\Community Partner\thapar_ACM.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="ACM IGDTUW" href="https://www.linkedin.com/company/acm-student-chapter-igdtuw"><img src="img\Sponsor Logos\Community Partner\ACM- IGDTUW Student Chapter.jpg" alt=""></a></div>
-          <div class="sponsor-logo"><a title="Mozilla Firefox Club VIT Bhopal" href="https://www.linkedin.com/company/mozilla-firefox-club-vit-bhopal/"><img src="img\Sponsor Logos\Community Partner\Mozilla Firefox VIT-Bhopal.jpeg" alt=""></a></div>
-          <div class="sponsor-logo"><a title="Eduhub Community" href="https://www.linkedin.com/company/eduhub-community"><img src="img\Sponsor Logos\Community Partner\eduhub.png" alt=""></a></div>
-          <div class="sponsor-logo"><a title="MLSA" href="https://studentambassadors.microsoft.com/"><img src="img\Sponsor Logos\Community Partner\MLSA.png" alt=""></a></div>
+        <section class="customer-logos slider">
+          <div class="slide"><a title="Heiphen" href="https://heiphen.com/"><img src="img\Sponsor Logos\Community Partner\heipehn-dark.png" alt=""></a></div>
+          <div class="slide"><a title="Technoliterati IGDTUW" href="https://www.linkedin.com/company/technoliterati-igdtuw/mycompany/"><img src="img\Sponsor Logos\Community Partner\TLit logo - Charanjeev Kaur.jpg" alt=""></a></div>
+          <div class="slide"><a title="GeeksForGeeks IGDTUW" href="https://instagram.com/geeksforgeeks.igdtuw?utm_medium=copy_link"><img src="img\Sponsor Logos\Community Partner\GFG_official logo - GFG Igdtuw.jfif" alt=""></a></div>
+          <div class="slide"><a title="GDSC NSUT" href="https://www.linkedin.com/company/dscnsut/"><img src="img\Sponsor Logos\Community Partner\GDSC_NSUT.png" alt=""></a></div>
+          <div class="slide"><a title="GDSC GLAU" href="https://www.linkedin.com/company/gdsc-glau/"><img src="img\Sponsor Logos\Community Partner\GDSC_GLA.png" alt=""></a></div>
+          <div class="slide"><a title="GDSC DIEMS" href="https://www.linkedin.com/in/gdsc-diems-4ab938220/"><img src="img\Sponsor Logos\Community Partner\GDSC_DIEMS.png" alt=""></a></div>
+          <div class="slide"><a title="Thapar ACM" href="https://www.linkedin.com/company/thapar-acm-student-chapter/mycompany/"><img src="img\Sponsor Logos\Community Partner\thapar_ACM.png" alt=""></a></div>
+          <div class="slide"><a title="ACM IGDTUW" href="https://www.linkedin.com/company/acm-student-chapter-igdtuw"><img src="img\Sponsor Logos\Community Partner\ACM- IGDTUW Student Chapter.jpg" alt=""></a></div>
+          <div class="slide"><a title="Mozilla Firefox Club VIT Bhopal" href="https://www.linkedin.com/company/mozilla-firefox-club-vit-bhopal/"><img src="img\Sponsor Logos\Community Partner\Mozilla Firefox VIT-Bhopal.jpeg" alt=""></a></div>
+          <div class="slide"><a title="Eduhub Community" href="https://www.linkedin.com/company/eduhub-community"><img src="img\Sponsor Logos\Community Partner\eduhub.png" alt=""></a></div>
+          <div class="slide"><a title="MLSA" href="https://studentambassadors.microsoft.com/"><img src="img\Sponsor Logos\Community Partner\MLSA.png" alt=""></a></div>
        </section>
       </div>
 
@@ -369,8 +372,6 @@
       </div>
 
     </section>
-
-
 
     <!--========== FOOTER (Socials) ==========-->
     <section class="footer " id="contact_us">
