added cisco logo

--- a/index.html
+++ b/index.html
@@ -334,7 +334,8 @@
           <div class="slide"><a title="Clerky" href="https://www.clerky.com/"><img src="img\Sponsor Logos\Silver Sponsor\Clerky_Logo.jpg" alt=""></a></div>
           <div class="slide"><a title="Axure" href="https://www.axure.com/"><img src="img\Sponsor Logos\Silver Sponsor\Axure_Logo.png" alt=""></a></div>
           <div class="slide"><a title="Fueler" href="https://fueler.io/"><img src="img\Sponsor Logos\Silver Sponsor\fueler_logo.png" alt=""></a></div>
-       </section>
+          <div class="slide"><a title="Cisco" href="https://www.cisco.com/c/en_in/index.html"><img src="img/Sponsor Logos/Silver Sponsor/Cisco.png" alt=""></a></div>
+        </section>
       </div>
 
       <div class="sponsor-container">
