--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
           <div class="slide"><a title="Taskade" href="https://taskade.com/"><img src="img\Sponsor Logos\Gold Sponsor\taskade-logo.png" alt=""></a></div>
           <div class="slide"><a title="Interview Buddy" href="https://interviewbuddy.in/"><img src="img\Sponsor Logos\Gold Sponsor\logo-of-interviewbuddy.png" alt=""></a></div>
           <div class="slide"><a title="Interview Cake" href="https://interviewcake.com/"><img src="img\Sponsor Logos\Gold Sponsor\interview-cake.png" alt=""></a></div>
+          <div class="slide"><a title="Coding Ninjas" href="https://www.codingninjas.com/"><img src="img\Sponsor Logos\Gold Sponsor\coding-ninjas-logo-white.png" alt=""></a></div>
           <div class="slide"><a title="Wolfram" href="https://wolfram.com/"><img src="img\Sponsor Logos\Gold Sponsor\wolfram-language-text-logo.png" alt=""></a></div>
           <div class="slide"><a title=".XYZ" href="https://gen.xyz/"><img src="img\Sponsor Logos\Gold Sponsor\xyz-logo-color.png" alt=""></a></div>
           <div class="slide"><a title="Divya Gera Foundation" href="https://instagram.com/divyagerafoundation_"><img src="img\Sponsor Logos\Gold Sponsor\dgf logo.png" alt=""></a></div>
@@ -326,7 +327,6 @@
           <div class="slide"><a title="Echo3D" href="https://www.echo3d.co/"><img src="img\Sponsor Logos\Silver Sponsor\echo3D - Logo 2021 - Black.png" alt=""></a></div>
           <div class="slide"><a title="Rosenfeld" href="https://rosenfeldmedia.com/"><img src="img\Sponsor Logos\Silver Sponsor\rosenfeld-logo.gif" alt=""></a></div>
           <div class="slide"><a title="Art Of Problem Solving" href="https://artofproblemsolving.com/"><img src="img\Sponsor Logos\Silver Sponsor\AoPS_Main_Logo.png" alt=""></a></div>
-          <div class="slide"><a title="Coding Ninjas" href="https://www.codingninjas.com/"><img src="img\Sponsor Logos\Silver Sponsor\coding-ninjas-logo-white.png" alt=""></a></div>
           <div class="slide"><a title="Cybrancee" href="https://cybrancee.com/"><img src="img\Sponsor Logos\Silver Sponsor\Cybrancee-logo.png" alt=""></a></div>
           <div class="slide"><a title="WrapCart" href="https://www.wrapcart.com/"><img src="img\Sponsor Logos\Silver Sponsor\WrapCart_Logo.png" alt=""></a></div>
           <div class="slide"><a title="1password" href="https://1password.com"><img src="img\Sponsor Logos\Silver Sponsor\1P-wordmark.png" alt=""></a></div>
