--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
           <div class="slide"><a title=".XYZ" href="https://gen.xyz/"><img src="img\Sponsor Logos\Gold Sponsor\xyz-logo-color.png" alt=""></a></div>
           <div class="slide"><a title="Divya Gera Foundation" href="https://instagram.com/divyagerafoundation_"><img src="img\Sponsor Logos\Gold Sponsor\dgf logo.png" alt=""></a></div>
           <div class="slide"><a title="Alan AI" href="https://alan.app/"><img src="img\Sponsor Logos\Gold Sponsor\alan-logo-horizontal-color.png" alt=""></a></div>
-          <div class="slide"><a title="symbl.ai" href="https://symbl.ai/"><img src="img\Sponsor Logos\Gold Sponsor\symbal-ai.jpeg" alt=""></a></div>
+          <div class="slide"><a title="symbl.ai" href="https://symbl.ai/"><img src="img\Sponsor Logos\Gold Sponsor\Symbl_logo.png" alt=""></a></div>
        </section>
       </div>
 
