--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@
           <div class="slide"><a title="Axure" href="https://www.axure.com/"><img src="img\Sponsor Logos\Silver Sponsor\Axure_Logo.png" alt=""></a></div>
           <div class="slide"><a title="Fueler" href="https://fueler.io/"><img src="img\Sponsor Logos\Silver Sponsor\fueler_logo.png" alt=""></a></div>
           <div class="slide"><a title="Cisco" href="https://www.cisco.com/c/en_in/index.html"><img src="img/Sponsor Logos/Silver Sponsor/Cisco.png" alt=""></a></div>
+          <div class="slide"><a title="GitHub" href="https://github.com/"><img src="img/Sponsor Logos/Silver Sponsor/GitHub.png" alt=""></a></div>
         </section>
       </div>
 
